<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cafe</string>

    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="order_summary">Order Summary</string>
    <string name="money">$0</string>
    <string name="order">Order</string>

    <string name="thank_u">Thank You!!</string>
    <string name="order_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g> </string>
    <string name="add_whipped">Add Whipped Cream ?<xliff:g id="whipped" example="true">%b</xliff:g></string>
    <string name="add_chocolate">Add Chocolate ?<xliff:g id="chocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>


</resources>
