<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cafe">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_field"
        style="@style/CustomText"
        android:hint="@string/name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        style="@style/CustomText"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24sp"
        android:layout_marginLeft="16dp"
        style="@style/CustomText"
        android:textColor="@android:color/white"/>

    <CheckBox
        android:id="@+id/chocolate_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:paddingLeft="24sp"
        android:layout_marginLeft="16dp"
        style="@style/CustomText"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        style="@style/CustomText"
        android:textSize="16sp"/>

    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/plus"
        android:onClick="increment"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        tools:ignore="OnClick"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        style="@style/CustomText"
        android:layout_marginStart="20dp"/>

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:layout_marginTop="16dp"
        android:onClick="decrement"
        android:layout_marginStart="20dp"/>
   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        style="@style/CustomText"
        android:layout_marginStart="20dp"/>


    <TextView
        android:id="@+id/orderSummary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:layout_marginStart="20dp"/>



</LinearLayout>
</ScrollView>